# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2012 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.1758.2.269 2012-12-03 13:29:27 mg Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

3.0.23 2013-??-??
 - 2013-07-22 Fixed bug#9541 - Package manager cannot use https proxy.
 - 2013-07-10 Backport of bugfix#7518 - Escalation Notify by not working properly (follow-up fix).

3.0.22 2013-07-09
 - 2013-06-25 Improved parameter quoting in various places.

3.0.21 2013-06-18
 - 2013-06-06 Improved permission checks in AgentTicketWatcher.

3.0.20 2013-05-21
 - 2013-05-17 Updated Package Manager, that will ensure that packages to be installed
    meet the quality standards of OTRS Group. This is to guarantee that your package
    wasn’t modified, which may possibly harm your system or have an influence on the
    stability and performance of it. All independent package contributors will have
    to conduct a check of their Add-Ons by OTRS Group in order to take full advantage
    of the OTRS package verification.
 - 2013-05-07 Improved permission checks in AgentTicketPhone.
 - 2013-05-07 Fixed bug#7478 - Got an external answer to an internal mail.
 - 2013-04-08 Fixed bug#9312 - LinkObject permission check problem.

3.0.19 2013-04-02
 - 2013-03-18 Improved permission checks in LinkObject.

3.0.18 2013-03-12
 - 2013-03-04 Updated CKEditor to version 3.6.6.
 - 2013-03-02 Fixed bug#9214 - IE10: impossible to open links from rich text articles.
 - 2012-12-03 Fixed bug#8933 - ArticleStorageInit permission check problem.
 - 2012-11-28 Fixed bug#8955 - Init script might fail on SUSE.
 - 2012-10-23 Fixed bug#8566 - Cannot download attachment if filename has character #.
 - 2012-10-23 Fixed bug#8833 - Article table in TicketZoom does not scroll correctly.